@startuml
'https://plantuml.com/class-diagram'
abstract class ManagementDatabase {
    #  Connection sqlConnection
    #  List<Word> searchResultList
    +  ManagementDatabase()
    +  Connection getSqlConnection()
    +  void setSqlConnection(Connection sqlConnection)
    +  List<Word> getSearchResultList()
    +  void setSearchResultList(List<Word> wordList)
    +  abstract Word findWord(String wordType)
    +  abstract void deleteWord(String wordType)
    +  abstract void findMatchestWord(String wordType)
    +  void addWord(String wordType, String wordExplain, String shortDescrip, String prounciation)
}

class ManagementDictionaryDatabase extends ManagementDatabase {
    -  final String PATH_DATABASE
    +  ManagementDictionaryDatabase()
    +  Word findWord(String wordType)
    +  void deleteWord(String wordType)
    +  void findMatchestWord(String wordType)
    +  boolean isExist(String wordType)
    +  void addWord(String wordType, String wordExplain, String shortDescrip, String prounciation)
}

class ManagementFavorite extends ManagementDatabase {
    -  final String PATH_DATABASE
    +  ManagementFavorite()
    +  void deleteWord(String wordType)
    +  void addWord(String wordType)
    +  Word findWord(String wordType)
    +  List<Word> showHistory()
    +  void findMatchestWord(String wordType)
    +  boolean isExist(String wordType)
}

class ManagementHistoryDatabase extends ManagementDatabase {
    -  final String PATH_DATABASE
    +  ManagementHistoryDatabase()
    +  Word findWord(String wordType)
    +  void deleteWord(String wordType)
    +  void addWord(String wordType)
    +  List<Word> showHistory()
    +  void findMatchestWord(String wordType)
}

class Word {
        - String wordType
        - String htmlType
        + Word(String wordType, String htmlType )
        + String getWordType()
        + void setWordType(String wordType)
        + String getHtmlType()
        + void setHtmlType(String htmlType)
}

ManagementHistoryDatabase *-- Word
ManagementFavorite *-- Word
ManagementDictionaryDatabase *-- Word
@enduml

